--- a/vignettes/articles/cropping.Rmd
+++ b/vignettes/articles/cropping.Rmd
@@ -2,6 +2,7 @@
 title: "Cropping data recorded before deployment and after retrieval"
 output:
   html_document:
+    css: "article.css"
     theme: flatly
     number_sections: true
     highlighted: default 
@@ -17,23 +18,6 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-```
-
-```{css, echo=FALSE}
-pre {
-  max-height: 300px;
-  overflow-y: auto;
-}
-
-pre[class] {
-  max-height: 100px;
-}
-
-.scroll-100 {
-  max-height: 100px;
-  overflow-y: auto;
-  background-color: inherit;
-}
 ```
 
 ## Editable script
