put css back in the article itself

--- a/vignettes/articles/7DADM_site_impairment.Rmd
+++ b/vignettes/articles/7DADM_site_impairment.Rmd
@@ -2,7 +2,6 @@
 title: "Computing 7DADM and identifying site impairments"
 output:
   html_document:
-    css: "article.css"
     theme: flatly
     number_sections: true
     highlighted: default 
@@ -11,8 +10,6 @@ output:
       collapsed: no
       smooth_scroll: no
     toc_depth: 3
-pkgdown:
-  as_is: true
 ---
 
 ```{r, include = FALSE}
@@ -20,6 +17,23 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+```
+
+```{css, echo = FALSE}
+pre {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+pre[class] {
+  max-height: 200px;
+}
+
+.scroll-100 {
+  max-height: 200px;
+  overflow-y: auto;
+  background-color: inherit;
+}
 ```
 
 ## Editable script
