--- a/vignettes/articles/cropping.Rmd
+++ b/vignettes/articles/cropping.Rmd
@@ -226,7 +226,7 @@ for(this.file in csv_files){
 }; cat("Done.", fill = TRUE)
 ```
 
-## Demo of the above script
+## Tutorial (script)
 
 First we'll load the libraries we'll use:
 
@@ -269,6 +269,7 @@ croppedplots_loc <- paste0(base_loc, "2_cropped_plots/")
 
 # name of your LDRTimes file that has the lookup table with deployment/retrieval dates
 ldrtimes_fn <- "LDRTimes_summer22.xlsx"
+
 # in our case, the LDR file is in the same folder as the raw data
 ldrtimes_loc <- rawdata_loc
 ```
@@ -284,7 +285,7 @@ Next, we use R to get a list of the filenames of the raw data files, and we call
 csv_files = list.files(path = rawdata_loc, pattern = '*csv')
 ```
 
-Take a look at the list to make sure that it looks right and contains all the files you want to crop:
+Let's take a look at the list to make sure that it looks right and contains all the files we want to crop:
 
 ```{r, eval = FALSE}
 csv_files
@@ -296,7 +297,7 @@ We also need to read in the **l**ookup table of **d**eployment and **r**etrieval
 ldrtimes = readxl::read_xlsx(paste0(ldrtimes_loc, ldrtimes_fn))
 ```
 
-Next we crop the files!
+Next we crop the files! For-loops have the format `for(xxx in yyy){code}`. They run the code inside the curly braces for each value `xxx` of `yyy`. For instance, `for(i in 1:5){print(i)}` will print the numbers 1, 2, 3, 4, 5. Here, we are using a for-loop to read in and process each file. After this code chunk, we'll break down what this for-loop is doing by running the code inside of it for just a single file. (Tip: this is a great way to understand what a for-loop is doing, and also a great way to debug a for-loop if you are trying to write or modify one.)
 
 ```{r, eval = FALSE}
 i = 0
@@ -397,6 +398,119 @@ for(this.file in csv_files){
                   width = 11, height = 8.5, units = "in")
 
 }; cat("Done.", fill = TRUE)
+```
+
+Let's consider the first file in the list:
+
+```{r, eval = FALSE}
+this.file = csv_files[1]; i = 1
+```
+
+The `cat` function prints messages to the screen. The `paste0` function allows us to glue together text and values. This is just printing out which file is being read in so that you have some progress updates as the code runs.
+
+```{r, eval = FALSE}
+cat(paste0("Reading file ", i, " of ", length(csv_files), ": ", this.file), fill = TRUE)
+```
+
+The next part splits up the filename to extract the metadata it contains. This code assumes your files are called `sitename_medium_deployseason_deployyear.csv`, where `sitename` is the name for the sampling location, the `medium` whose temperature is being measured is either air or water, and `deployseason` and `deployyear` are the season (`fall` or `sum`) and two-digit year when the first data point in this file was collected. For example, you might have a file called `NolanLower_air_sum_23.csv` which contains air temperature data for a season starting in summer 2023 from a location called Nolan Lower.
+
+`str_split_1(this.file, '[_.]')` splits the filename into pieces wherever it contains an underscore or a period. The code after that names some of these pieces of information, and we will add them to the dataset later.
+
+```{r, eval = FALSE}
+# extract metadata from the filename
+filename.parts = stringr::str_split_1(this.file, '[_.]')
+csv.site = filename.parts[1]
+csv.media = filename.parts[2]
+csv.season = filename.parts[3]
+csv.year = filename.parts[4]
+```
+
+
+
+```{r, echo=FALSE}
+# convert the character-format datetime to an R POSIXct object
+# ymd_hm is the format the character string is in initially; it tells R
+# how to read and interpret the character string
+# sometimes R reads in the datetime format as mdy_hms and sometimes mdy_hm.
+# This tryCatch handles either hh:mm:ss or hh:mm format in csv files
+this.data =  tryCatch(
+  {
+    readr::read_csv(paste0(rawdata_loc, this.file),
+                    skip = 2, # skip the first two lines of the file
+                    col_select = 1:3, # read only the first three columns of data
+                    col_names = FALSE, # don't try to name columns from a row of the file
+                    show_col_types = FALSE) %>% # suppresses print message
+      dplyr::rename("row.num" = X1,
+                    "datetime" = X2,
+                    "temperature" = X3) %>%
+      dplyr::mutate(datetime = lubridate::mdy_hms(datetime)) #for datetime in hh:mm:ss
+  },
+  warning = function(cond) { #if datetime isn't in hh:mm:ss, will now try hh:mm format
+    readr::read_csv(paste0(rawdata_loc, this.file),
+                    skip = 2, # skip the first two lines of the file
+                    col_select = 1:3, # read only the first three columns of data
+                    col_names = FALSE, # don't try to name columns from a row of the file
+                    show_col_types = FALSE) %>% # suppresses print message
+      dplyr::rename("row.num" = X1,
+                    "datetime" = X2,
+                    "temperature" = X3) %>%
+      dplyr::mutate(datetime = lubridate::mdy_hm(datetime)) #for datetime in hh:mm
+  }
+)
+
+# crop the data
+deploy.retrieval = ldrtimes %>%
+  # select the row(s) of ldrtimes that match this datafile
+  # should be exactly one row, but if there are no rows or multiple rows that
+  # match, this step will pull that many rows
+  dplyr::filter(site == csv.site, deploy_season == csv.season,
+                deploy_year == csv.year, media == csv.media) %>%
+  # keep just the deploy_time and retrieval_time variables/columns
+  dplyr::select(deploy_time, retrieval_time)
+
+if(nrow(deploy.retrieval) == 0){
+  stop("no rows of ldrtimes matched this csv file.")
+}
+if(nrow(deploy.retrieval) > 1){
+  stop("multiple rows of ldrtimes matched this csv file.")
+}
+
+deploy = deploy.retrieval$deploy_time
+retrieval = deploy.retrieval$retrieval_time
+
+if(retrieval > deploy) {
+  cropped.data = dplyr::filter(this.data,
+                               datetime > deploy,
+                               datetime < retrieval)
+
+} # if(retrieval > deploy)
+
+# write cropped csv files to cropped folder
+readr::write_csv(cropped.data,
+                 file=paste0(cropped_loc,
+                             stringr::str_split_i(this.file, "[.]", 1), "_cropped.csv"))
+
+#Create a dataframe of the raw and cropped data
+cropvraw <- dplyr::left_join(this.data, cropped.data, by=c("row.num", "datetime")) %>%
+  dplyr::rename(raw.temp = temperature.x,
+                cropped.temp = temperature.y) %>%#rename temperature from each file
+  #create new column of data type (raw or cropped for plotting in ggplot)
+  tidyr::pivot_longer(cols = raw.temp:cropped.temp,
+                      names_to="type", values_to="temp")
+
+cropvraw.plot <- ggplot2::ggplot(cropvraw,
+                                 ggplot2::aes(x = datetime,
+                                              y = temp,
+                                              color = type)) +
+  ggplot2::geom_line(na.rm=TRUE) +
+  ggplot2::geom_point(na.rm=TRUE) +
+  ggplot2::labs(title = paste0(" Raw versus Cropped data"),
+                x = "Date", y = "Temperature (C)")+
+  ggplot2::theme(axis.text = ggplot2::element_text(colour = "black", size = (12)))
+
+ggplot2::ggsave(paste0(croppedplots_loc, csv.site, "_rawvscroppeddata.png"),
+                cropvraw.plot,
+                width = 11, height = 8.5, units = "in")
 ```
 
 
