Missed an eval = FALSE

--- a/vignettes/articles/cropping.Rmd
+++ b/vignettes/articles/cropping.Rmd
@@ -427,7 +427,7 @@ csv.year = filename.parts[4]
 
 
 
-```{r, echo=FALSE}
+```{r, eval = FALSE}
 # convert the character-format datetime to an R POSIXct object
 # ymd_hm is the format the character string is in initially; it tells R
 # how to read and interpret the character string
